--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "eslintConfig": {
     "root": true,
     "env": {
